# mcp-practice

./: Cargo.toml
src/: echo.rs
src/echo/: server.rs
